fix burger on horizontal screen

--- a/src/pug/helpers/mixins.pug
+++ b/src/pug/helpers/mixins.pug
@@ -5,19 +5,19 @@ mixin svg(href)
 mixin soc-line
   ul.soc-line.flex-sb
     li 
-      a.soc(href="#") 
+      a.soc(href="mailto:vovk.as@ukr.net") 
         +svg("#mail")
     li 
       a.soc(href="#") 
         +svg("#tg")
     li 
-      a.soc(href="#") 
+      a.soc(href="viber://chat?number=+380679047738%20") 
         +svg("#viber")
     li 
-      a.soc(href="#") 
+      a.soc(href="https://www.instagram.com/reklamapodilya/") 
         +svg("#inst")
     li 
-      a.soc(href="#") 
+      a.soc(href="https://www.facebook.com/reklamapodilya") 
         +svg("#fb")
 
 mixin button(type, href='#', content)
