--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -111,11 +111,17 @@ header
         .wrapper
           flex-wrap: wrap 
           justify-content: space-between
-      .menu ul 
-        display: flex
-        flex-direction: column
-        text-align: center
-        padding-top: 30px
+      .menu 
+        width: 100%
+        height: 100%
+        ul 
+          max-height: 50vh
+          display: flex
+          height: 100%
+          flex-direction: column
+          text-align: center
+          padding: 30px 0
+          overflow-y: scroll
         li a
           display: inline-block
           padding: 10px 0
