add front of additional page

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -173,7 +173,7 @@ block content
               label(for="name") Ваше імʼя*
             p.email 
               input#email(type="text", name="email" required)
-              label(for="email") Ваше емейл*
+              label(for="email") Ваш емейл*
             p.phone 
               input#phone(type="tel", name="phone")
               label(for="phone") Ваш номер телефону
