--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -892,16 +892,63 @@ address
     &:hover
       color: $primaryBlue
 
+.examples 
+  .sec-subtitle,
+  .button-line 
+    margin-bottom: 30px
+
 .examples-line 
-  display: grid
-  grid-template: repeat(2, 1fr) / repeat(3, 1fr)
-  grid-gap: 30px 20px
-  grid-auto-flow: row dense
-  overflow: hidden
-  figure 
-    width: 100%
-    &:nth-child(odd)
-      grid-row: 1/2
-    &:nth-child(even)
-      grid-row: 2/3
-      
+  display: flex
+  flex-direction: column
+  flex-wrap: wrap
+  gap: 30px 20px
+  max-height: 1500px
+  overflow-x: hidden
+
+.pag-line 
+  display: flex
+  justify-content: center 
+  align-items: center 
+  column-gap: 20px
+
+.pag-arr 
+  position: relative
+  width: 25px
+  height: 25px
+  border: 1px solid $textTButton 
+  border-radius: 3px
+  transition: $trs
+  &:before 
+    content: ''
+    position: absolute 
+    top: 8px
+    // left: 10px
+    width: 8px
+    height: 8px
+    border: 1px solid $textTButton 
+    border-top: none
+    border-left: none
+    border-radius: 1px
+    transition: $trs
+  &.arr-left 
+    &:before
+      left: 10px
+      transform: rotate(135deg)
+  &.arr-right 
+    &:before
+      right: 10px
+      transform: rotate(-45deg)
+  &:hover 
+    background: $textTButton
+    &:before
+      border-color: #fff
+
+.pag-pages 
+  display: flex
+  column-gap: 15px
+  font-weight: 500
+  text-transform: uppercase
+  a 
+    transition: $trs
+    &:hover 
+      transform: scale(1.2)
