add photos and desc in main page

--- a/src/pug/components/creating.pug
+++ b/src/pug/components/creating.pug
@@ -1,3 +1,4 @@
+a#works
 section.creating 
   h2.sec-title ВИГОТОВЛЕННЯ ЗОВНІШНЬОЇ РЕКЛАМИ. РОЗРОБКА МОНТАЖ ТА СЕРВІС.
   //- p.make-choice Обрати вид реклами:
@@ -33,25 +34,25 @@ section.creating
   .creating-screen.choosen-screen(data-block-name="ll")
     .fig-list.flex-sb 
       +creatingFigure(
-        "img/ll_bidonchik.png",
-        "Обʼємні літери для компанії \"БІДОНЧИК\"",
-        "Обʼємні літери для компанії \"БІДОНЧИК\"",
-        "????",
-        "30 СМ"
+        "img/ll_bidonchik.jpg",
+        "Об’ємні світлові літери для магазину «Бідончик»",
+        "Об’ємні світлові літери для магазину «Бідончик»",
+        "Поклейка літер виконана з жовтої плівки ORACAL, для підложки використаний матовий композит чорного кольору.",
+        "Встановлені у м.Хмельницький."
       )
       +creatingFigure(
-        "img/ll_utis.png",
-        "Обʼємні літери для компанії \"ЮТІС\"",
-        "Обʼємні літери для компанії \"ЮТІС\"",
-        "????",
-        "30 СМ"
+        "img/ll_sviatoslav.jpg",
+        "Об’ємні світлові літери для ресторану «Святослав»",
+        "Об’ємні світлові літери для ресторану «Святослав»",
+        "Передня та бокові частини літер поклеєні матовим золотом з плівки ORACAL, яка надає їм вишуканого вигляду.",
+        "Встановлені у м.Винники."
       )
       +creatingFigure(
-        "img/ll_dnipro.png",
-        "Обʼємні літери для компанії \"DNIPRO M\"",
-        "Обʼємні літери для компанії \"DNIPRO M\"",
-        "????",
-        "30 СМ"
+        "img/ll_dnipro.jpg",
+        "Об’ємні світлові літери для компанії «DNIPRO M»",
+        "Об’ємні світлові літери для компанії «DNIPRO M»",
+        "Виготовлені з акрилу та поклеєні флюоресцентною плівкою ORACAL в корпоративний колір.",
+        "Встановлені у м. Дунаївці"
       )
     article.screen-desc 
       h2.sec-title На даний час об’ємні букви (літери) є одним з найефективнішим видом зовнішньої реклами в багатьох сферах бізнесу.
@@ -60,25 +61,22 @@ section.creating
   .creating-screen(data-block-name="ls")
     .fig-list.flex-sb 
       +creatingFigure(
-        "img/ls_technoprostir.png",
-        "Вивіска для компанії \"ТЕХНОПРОСТІР\"",
-        "Вивіска для компанії \"ТЕХНОПРОСТІР\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/ls_amsterdam.jpg",
+        "Лайтбокс для студії краси «Амстердам»",
+        "Лайтбокс для студії краси «Амстердам»",
+        "Виготовлений з акрилу та поклеєний плівкою ORACAL, порізаною на плотерному станку, виглядає стильно та привабливо, в нічний час світиться сама інформація, що підкреслює кожну літеру окремо за рахунок підсвічування світлодіодними модулями."
       )
       +creatingFigure(
-        "img/ls_hearty_yard.png",
-        "Обʼємні літери для компанії \"СИТНИЙ ДВІР\"",
-        "Обʼємні літери для компанії \"СИТНИЙ ДВІР\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/ls_grono.jpg",
+        "Вивіска для коворкінг центру «Ґроно»",
+        "Вивіска для коворкінг центру «Ґроно»",
+        "Замовлення спроектовано з короба алюмінієвого композиту, поверх нанесені акрилові літери малого об’єму, та світловий двохсторонній лайтбокс. Поклейка на вікнах зроблена з плівки ORACAL.",
       )
       +creatingFigure(
-        "img/ls_repair_hall.png",
-        "Обʼємні літери для компанії \"РЕМОНТ ХОЛЛ\"",
-        "Обʼємні літери для компанії \"РЕМОНТ ХОЛЛ\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/ls_notarius.jpg",
+        "Вивіска для нотаріальної компанії",
+        "Вивіска для нотаріальної компанії",
+        "Вивіска створена для нотаріальної компанії у центрі Хмельницького, на глянцевій композитній панелі було зроблено світлові літери білого глянцевого відтінку, виглядає стримано та красиво."
       )
     article.screen-desc 
       h2.sec-title ОБ’ЄМНІ ЛОГОТИПИ КОМПАНІЙ.ВИВІСКА З ОБ’ЄМНИМИ ЛІТЕРАМИ.
@@ -87,25 +85,22 @@ section.creating
   .creating-screen(data-block-name="ns")
     .fig-list.flex-sb 
       +creatingFigure(
-        "img/ns_biliy_naliv.png",
-        "Вивіска для компанії \"БІЛИЙ НАЛИВ\"",
-        "Вивіска для компанії \"БІЛИЙ НАЛИВ\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/ns_1000_dribnyts.jpg",
+        "Неонова вивіска для магазину «1000 ДРІБНИЦЬ»",
+        "Неонова вивіска для магазину «1000 ДРІБНИЦЬ»",
+        "Виготовлена з високоякісної діодної стрічки помаранчевого кольору, що надає вивісці неперевершений вигляд у темну пору, та привертає увагу покупців, чудово підійде для магазинів, торгових точок, вітрин, оформлення кімнати."
       )
       +creatingFigure(
-        "img/ns_ajour.png",
-        "Вивіска для компанії \"AJOUR\"",
-        "Вивіска для компанії \"AJOUR\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/ns_reiestratura.jpg",
+        "Неонова вивіска для «Цукерні Потоцьких»",
+        "Неонова вивіска для «Цукерні Потоцьких»",
+        "Виготовлена зі скляної трубки, яка наповнена інертним газом, виглядає стримано та кидається в очі відвідувачам, при встановлені використали композитну панель, чудово вписується в інтер’єр закладу."
       )
       +creatingFigure(
-        "img/ns_rendez_vous.png",
-        "Обʼємні літери для компанії \"RENDEZ-VOUS\"",
-        "Обʼємні літери для компанії \"RENDEZ-VOUS\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/ns_cukernia_potockhyh.png",
+        "Вивіска для міської лікарні «Реєстратура»",
+        "Вивіска для міської лікарні «Реєстратура»",
+        "Літери зроблені з ефектом контражуру, освітлюються зсередини, що надає їм чарівної гри світла та тіні, на задній частині дерев’яної панелі встановлено діодну стрічку, що додає контурного вигляду."
       )
     article.screen-desc 
       h2.sec-title СКЛЯНА ТРУБКА З ІНЕРТНИМ ГАЗОМ.
@@ -114,25 +109,22 @@ section.creating
   .creating-screen(data-block-name="vv")
     .fig-list.flex-sb 
       +creatingFigure(
-        "img/vv_kapcake.png",
-        "Обʼємний козирок для компанії \"КАПКЕЙК\"",
-        "Обʼємний козирок для компанії \"КАПКЕЙК\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/vv_vm_mebli.jpg",
+        "Об’ємний козирок для студії дизайну «VM mebli»",
+        "Об’ємний козирок для студії дизайну «VM mebli»",
+        "Виготовлений з матового композиту графітового кольору, на якому розташовуються дзеркальні золоті літери, з контражурною підсвіткою, що додають вивісці витончений вигляд та грацію, як у темний час, так і у день, встановлено у м.Нетішин."
       )
       +creatingFigure(
-        "img/vv_kapcake.png",
-        "Обʼємний козирок для компанії \"КАПКЕЙК\"",
-        "Обʼємний козирок для компанії \"КАПКЕЙК\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/vv_parfum.jpg",
+        "Об’ємний козирок для магазину «Парфум»",
+        "Об’ємний козирок для магазину «Парфум»",
+        "Виготовлений з червоного матового композиту з елементами дзеркального золота, на якому розташовуються глянцеві світлові літери білого кольору, чудове поєднання кольорів зовнішньої реклами шлях до вашого успіху та продажів."
       )
       +creatingFigure(
-        "img/vv_kapcake.png",
-        "Обʼємний козирок для компанії \"КАПКЕЙК\"",
-        "Обʼємний козирок для компанії \"КАПКЕЙК\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/vv_retoran.jpg",
+        "Об’ємний козирок для ресторану",
+        "Об’ємний козирок для ресторану",
+        "Виготовлений з чорного глянцевого композиту з елементами дзеркального золота, на якому розташовуються не світлові літери та золоті паєтки, що переливаються на сонці."
       )      
     article.screen-desc 
       h2.sec-title ОБ’ЄМНІ КОЗИРКИ РІЗНИХ КОНФІГУРАЦІЙ.
@@ -141,25 +133,22 @@ section.creating
   .creating-screen(data-block-name="eg")
     .fig-list.flex-sb 
       +creatingFigure(
-        "img/eg_ofice_center.png",
-        "Вхідна група для компанії \"ОФІС - ЦЕНТР\"",
-        "Вхідна група для компанії \"ОФІС - ЦЕНТР\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/eg_como.jpg",
+        "Неонова вивіска для магазину «1000 ДРІБНИЦЬ»",
+        "Неонова вивіска для магазину «1000 ДРІБНИЦЬ»",
+        "Виготовлена з високоякісної діодної стрічки помаранчевого кольору, що надає вивісці неперевершений вигляд у темну пору, та привертає увагу покупців, чудово підійде для магазинів, торгових точок, вітрин, оформлення кімнати."
       )
       +creatingFigure(
-        "img/eg_ofice_center.png",
-        "Вхідна група для компанії \"ОФІС - ЦЕНТР\"",
-        "Вхідна група для компанії \"ОФІС - ЦЕНТР\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/eg_parmezan.jpg",
+        "Lorem ipsum dolor sit amet.",
+        "Lorem ipsum dolor sit amet.",
+        "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam quo soluta corrupti sint odio aliquid."
       )
       +creatingFigure(
-        "img/eg_ofice_center.png",
-        "Вхідна група для компанії \"ОФІС - ЦЕНТР\"",
-        "Вхідна група для компанії \"ОФІС - ЦЕНТР\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/eg_nadin.jpg",
+        "Lorem ipsum dolor sit amet.",
+        "Lorem ipsum dolor sit amet.",
+        "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam quo soluta corrupti sint odio aliquid."
       )      
     article.screen-desc 
       h2.sec-title ВХІДНА ГРУПА. КОМПЛЕКС ЕЛЕМЕНТІВ ЗОВНІШНЬОЇ РЕКЛАМИ.
@@ -168,25 +157,22 @@ section.creating
   .creating-screen(data-block-name="sc")
     .fig-list.flex-sb 
       +creatingFigure(
-        "img/sc_teztour.png",
-        "Плівка для компанії \"TEZTOUR\"",
-        "Плівка для компанії \"TEZTOUR\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/sc_chiken.jpg",
+        "Магазин «Grilled Chicken»",
+        "Магазин «Grilled Chicken»",
+        "Поклейка вітрини виконана ламінованою плівкою ORACAL, що захищає наш виріб від різних чинників, включаючи: опади та вологу, УФ-випромінювання, вандалізм, подряпини. Також надає глянцевого блиску."
       )
       +creatingFigure(
-        "img/sc_teztour.png",
-        "Плівка для компанії \"TEZTOUR\"",
-        "Плівка для компанії \"TEZTOUR\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/sc_perukarnia.jpg",
+        "Перукарня «Чік-Чік»",
+        "Перукарня «Чік-Чік»",
+        "Поклейка на ПВХ, яка привертає увагу та додає стильного вигляду, за рахунок яскравих кольорів, та плівки стійкої до ультрафіолету, має матову структуру та глянцеві літери."
       )
       +creatingFigure(
-        "img/sc_teztour.png",
-        "Плівка для компанії \"TEZTOUR\"",
-        "Плівка для компанії \"TEZTOUR\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/sc_rozdrib.jpg",
+        "Торгова точка «Moda textile»",
+        "Торгова точка «Moda textile»",
+        "Поклейка двостороннього флажка “Тканини роздріб” зроблена ламінованою плівкою ORACAL."
       )
     article.screen-desc 
       h2.sec-title ПОКЛЕЙКА ВІТРИН.
@@ -195,25 +181,22 @@ section.creating
   .creating-screen(data-block-name="pl")
     .fig-list.flex-sb 
       +creatingFigure(
-        "img/pl_z_cafe.png",
-        "Табличка для компанії \"Z-CAFE\"",
-        "Табличка для компанії \"Z-CAFE\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/pl_forward_bank.jpg",
+        "Інформаційний щит для «Forward Bank»",
+        "Інформаційний щит для «Forward Bank»",
+        "Виготовлений з вологостійкого матеріалу, та ламінованої плівки ORACAL, що не вигорає на сонці, та передає бажану палітру кольорів"
       )
       +creatingFigure(
-        "img/pl_z_cafe.png",
-        "Табличка для компанії \"Z-CAFE\"",
-        "Табличка для компанії \"Z-CAFE\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/pl_geolabs.jpg",
+        "Виносний штендер «GeoLabs»",
+        "Виносний штендер «GeoLabs»",
+        "Для виносних штендерів ми використовуємо профільну трубу, що не дає виробу рухатись при поривах вітру, поклейка виконана з двох сторін."
       )
       +creatingFigure(
-        "img/pl_z_cafe.png",
-        "Табличка для компанії \"Z-CAFE\"",
-        "Табличка для компанії \"Z-CAFE\"",
-        "1176грн за 1 літеру",
-        "30 СМ"
+        "img/pl_amsterdam.jpg",
+        "Банер для студії краси «Амстердам»",
+        "Банер для студії краси «Амстердам»",
+        "Виготовлений з банерного матеріалу, на якому надрукована інформація, виріб вписався в дизайн інтер’єру, та слугує додатковою рекламою до основного виробу у вигляді лайтбокса"
       )
     article.screen-desc 
       h2.sec-title ШТЕНДЕРИ, ІНФОРМАЦІЙНІ ЩИТИ, ВУЛИЧНІ ТАБЛИЧКИ, БАНЕРИ
