--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,7 +1,6 @@
 extends components/template.pug 
 
 block content 
-  a#main
   section.first-screen
     h1 розробка та виготовлення зовнішньої реклами
     ul.adv-list
@@ -117,24 +116,27 @@ block content
       .fig-list.flex-sb 
         +creatingFigure(
           "img/vf_veloman.jpg",
-          "Вентильований фасад для компанії \"VELOMAN\"",
-          "Вентильований фасад для компанії \"VELOMAN\"",
-          "????"
+          "Вентильований фасад для компанії «VELOMAN»",
+          "Вентильований фасад для компанії «VELOMAN»",
+          "Виготовлений з надміцних HPL-панелей, в колір дерев’яної палітри, що комбінується з чорним матовим композитом, сучасний стриманий стиль.", 
+          "м.Кам’янець-Подільський"
         )
         +creatingFigure(
-          "img/vf_second.jpg",
-          "Вентильований фасад для компанії \"VELOMAN\"",
-          "Вентильований фасад для компанії \"VELOMAN\"",
-          "????"
+          "img/vf_composit.png",
+          "Вентильований композитний фасад",
+          "Вентильований композитний фасад",
+          "Замовлення виконане з графітового композиту, в проект входило утеплення скловатою, та шар вітробар’єру, для захисту будівлі від зовнішніх чинників.",
+          "м.Шепетівка"
         )
         +creatingFigure(
           "img/vf_bubbles.jpg",
-          "Вентильований фасад для компанії \"BUBBLES\"",
-          "Вентильований фасад для компанії \"BUBBLES\"",
-          "????"
+          "Вентильований фасад для готелю «BUBBLES»",
+          "Вентильований фасад для готелю «BUBBLES»",
+          "Комплексне замовлення з елементами вентильованого фасаду темно-сірого забарвлення, та світловими літерами, які розташовуються над прохідною.",
+          "Виконаний у м.Кам’янець-Подільський"
         )
       +buttonLine
-    a#promo
+    a#works
     section.promo 
       b.sec-title акції
       .promo-line.flex-sb 
