--- a/src/pug/components/creating.pug
+++ b/src/pug/components/creating.pug
@@ -67,13 +67,13 @@ section.creating
         "Виготовлений з акрилу та поклеєний плівкою ORACAL, порізаною на плотерному станку, виглядає стильно та привабливо, в нічний час світиться сама інформація, що підкреслює кожну літеру окремо за рахунок підсвічування світлодіодними модулями."
       )
       +creatingFigure(
-        "img/ls_grono.jpg",
+        "img/ls_grono.JPG",
         "Вивіска для коворкінг центру «Ґроно»",
         "Вивіска для коворкінг центру «Ґроно»",
         "Замовлення спроектовано з короба алюмінієвого композиту, поверх нанесені акрилові літери малого об’єму, та світловий двохсторонній лайтбокс. Поклейка на вікнах зроблена з плівки ORACAL.",
       )
       +creatingFigure(
-        "img/ls_notarius.jpg",
+        "img/ls_notarius.JPG",
         "Вивіска для нотаріальної компанії",
         "Вивіска для нотаріальної компанії",
         "Вивіска створена для нотаріальної компанії у центрі Хмельницького, на глянцевій композитній панелі було зроблено світлові літери білого глянцевого відтінку, виглядає стримано та красиво."
@@ -85,7 +85,7 @@ section.creating
   .creating-screen(data-block-name="ns")
     .fig-list.flex-sb 
       +creatingFigure(
-        "img/ns_1000_dribnyts.jpg",
+        "img/ns_1000_dribnyts.JPG",
         "Неонова вивіска для магазину «1000 ДРІБНИЦЬ»",
         "Неонова вивіска для магазину «1000 ДРІБНИЦЬ»",
         "Виготовлена з високоякісної діодної стрічки помаранчевого кольору, що надає вивісці неперевершений вигляд у темну пору, та привертає увагу покупців, чудово підійде для магазинів, торгових точок, вітрин, оформлення кімнати."
@@ -109,13 +109,13 @@ section.creating
   .creating-screen(data-block-name="vv")
     .fig-list.flex-sb 
       +creatingFigure(
-        "img/vv_vm_mebli.jpg",
+        "img/vv_vm_mebli.JPG",
         "Об’ємний козирок для студії дизайну «VM mebli»",
         "Об’ємний козирок для студії дизайну «VM mebli»",
         "Виготовлений з матового композиту графітового кольору, на якому розташовуються дзеркальні золоті літери, з контражурною підсвіткою, що додають вивісці витончений вигляд та грацію, як у темний час, так і у день, встановлено у м.Нетішин."
       )
       +creatingFigure(
-        "img/vv_parfum.jpg",
+        "img/vv_parfum.JPG",
         "Об’ємний козирок для магазину «Парфум»",
         "Об’ємний козирок для магазину «Парфум»",
         "Виготовлений з червоного матового композиту з елементами дзеркального золота, на якому розташовуються глянцеві світлові літери білого кольору, чудове поєднання кольорів зовнішньої реклами шлях до вашого успіху та продажів."
@@ -133,19 +133,19 @@ section.creating
   .creating-screen(data-block-name="eg")
     .fig-list.flex-sb 
       +creatingFigure(
-        "img/eg_como.jpg",
+        "img/eg_como.JPG",
         "Неонова вивіска для магазину «1000 ДРІБНИЦЬ»",
         "Неонова вивіска для магазину «1000 ДРІБНИЦЬ»",
         "Виготовлена з високоякісної діодної стрічки помаранчевого кольору, що надає вивісці неперевершений вигляд у темну пору, та привертає увагу покупців, чудово підійде для магазинів, торгових точок, вітрин, оформлення кімнати."
       )
       +creatingFigure(
-        "img/eg_parmezan.jpg",
+        "img/eg_parmezan.JPG",
         "Lorem ipsum dolor sit amet.",
         "Lorem ipsum dolor sit amet.",
         "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam quo soluta corrupti sint odio aliquid."
       )
       +creatingFigure(
-        "img/eg_nadin.jpg",
+        "img/eg_nadin.JPG",
         "Lorem ipsum dolor sit amet.",
         "Lorem ipsum dolor sit amet.",
         "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam quo soluta corrupti sint odio aliquid."
@@ -181,7 +181,7 @@ section.creating
   .creating-screen(data-block-name="pl")
     .fig-list.flex-sb 
       +creatingFigure(
-        "img/pl_forward_bank.jpg",
+        "img/pl_forward_bank.JPG",
         "Інформаційний щит для «Forward Bank»",
         "Інформаційний щит для «Forward Bank»",
         "Виготовлений з вологостійкого матеріалу, та ламінованої плівки ORACAL, що не вигорає на сонці, та передає бажану палітру кольорів"
