add slider for first screen

--- a/src/pug/helpers/mixins.pug
+++ b/src/pug/helpers/mixins.pug
@@ -8,7 +8,7 @@ mixin soc-line
       a.soc(href="mailto:vovk.as@ukr.net") 
         +svg("#mail")
     li 
-      a.soc(href="#") 
+      a.soc(href="https://t.me/reklamapodillya") 
         +svg("#tg")
     li 
       a.soc(href="viber://chat?number=+380679047738%20") 
