--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,6 +2,12 @@ extends components/template.pug
 
 block content 
   section.first-screen
+    .bg 
+      img.active-img(src="img/fs_bg1.jpg", alt="Композитний фасад")
+      img(src="img/fs_bg2.JPG", alt="Об'ємні літери")
+      img(src="img/fs_bg3.JPG", alt="Об’ємний козирок")
+      img(src="img/fs_bg4.jpg", alt="Об'ємні літери")
+      img(src="img/fs_bg5.JPG", alt="Об'ємні світлові літери")
     h1 розробка та виготовлення зовнішньої реклами
     ul.adv-list
       li 
