--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -44,24 +44,32 @@ a
 
 header 
   padding-top: 160px
-  @media screen and ( max-width: 1660px )
-    padding-top: 170px
   @media screen and ( max-width: 768px )
-    padding-top: 79px
     .wrapper 
       width: auto
       margin: 0
       padding: 0
+  @media screen and ( max-width: 1660px )
+    padding-top: 170px
+  @media screen and ( max-width: 768px )
+    padding-top: 79px
+
+.showen-menu 
+  .header-line 
+    top: 0
+  
+
 
 .header-line 
   position: fixed
-  top: 0
   left: 0
+  top: -170px
   width: 100vw
   height: 160px
   background-color: rgba(255, 255, 255, 0.90)
   backdrop-filter: blur(10px)
   z-index: 10
+  transition: $trs
   @media screen and ( max-width: 1660px )
     height: 170px
   @media screen and ( max-width: 768px )
