change photo on first screen bg

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,8 +6,7 @@ block content
       img.active-img(src="img/fs_bg1.jpg", alt="Композитний фасад")
       img(src="img/fs_bg2.JPG", alt="Об'ємні літери")
       img(src="img/fs_bg3.JPG", alt="Об’ємний козирок")
-      img(src="img/fs_bg4.jpg", alt="Об'ємні літери")
-      img(src="img/fs_bg5.JPG", alt="Об'ємні світлові літери")
+      //- img(src="img/fs_bg5.JPG", alt="Об'ємні світлові літери")
     h1 розробка та виготовлення зовнішньої реклами
     ul.adv-list
       li 
